--- a/eeng0500_RC_Reactance_Impedance/Phasor_Diagram_V-I_Simple_V001.ipynb
+++ b/eeng0500_RC_Reactance_Impedance/Phasor_Diagram_V-I_Simple_V001.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d65ae39b-c959-45b9-8fba-194fa227613a",
+   "metadata": {},
+   "source": [
+    "Run it on<br>[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/rolfbecker/EE_1.08_2_EEng_WS2022/main?labpath=eeng0500_RC_Reactance_Impedance%2FPhasor_Diagram_V-I_Simple_V001.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "09c23ff0-b12e-4e9e-8ec6-ef373f5c3e31",
@@ -224,7 +232,7 @@
    "id": "e578c231-b8a6-4eb4-82fe-876251d4fc39",
    "metadata": {},
    "source": [
-    "## Exercise:\n",
+    "## Exercises:\n",
     "\n",
     "The current is shown in red, the voltage in blue. The left phasor diagram shows the momentary values of current and voltage in the complex plane as arrows.<br>\n",
     "The real parts (projections on the real (x-)axis) are shown as dots connected with dashed lines to the corrdinate system origin.\n",
@@ -238,7 +246,25 @@
     "When you change the time, how does the angle $\\phi$ measured from current to voltage (initially -90°) change over time?\n",
     "\n",
     "**3) Real Parts $I(t)$ and $V(t)$**<br>\n",
-    "The real parts of the complex numbers $I$ and $V$ are the projections on the real (x-)axis. They are shown as dots on the real axis of the phasor diagram. The same dots are shown in the right diagram showing the time dependence of real $I$ and $V$.  \n"
+    "The real parts of the complex numbers $I$ and $V$ are the projections on the real (x-)axis. They are shown as dots on the real axis of the phasor diagram. The same dots are shown in the right diagram showing the time dependence of real $I$ and $V$. Set the time such that $I(t)$ is at 45°. What is the real part of this instantaneous orientation of the current phasor, i.e. the red dot? Determine the value by means of Pythagoras. Do not use the trig functions of your calculator. Check the values in the right diagram. Are they in accordance? How does the real part change if you reduce the current amplitude $I_0$ from 4 to 2?\n",
+    "\n",
+    "**4) Phase Angle**<br>\n",
+    "The initial phase angle between current and voltage is set to -90°. Remember that angles are positive in couterclockwise direction. When you increase the time, which physical quantity is leading, current or voltage? If you look at the real parts: Which qauntity is reaching its max (or min) first?\n",
+    "\n",
+    "Change the phase angle to +90°. Which quantity is leading now? How do the curve change on the right sub-figure? Which curve reaches its minimum first?\n",
+    "\n",
+    "**5) Reactive Loads**\n",
+    "If you have an AC circuit with one ideal capacitor only, the impedance consists purely of capacitive reactance. In case you use complex numbers the impedance is purely imaginary:<br>\n",
+    "$Z = R + X = 0 + X_C = \\frac{1}{i\\omega C}$. <br>\n",
+    "Is in this case the current leading the voltage or vice versa? How is the situation if you exchange the capacitor for an inductor?\n",
+    "\n",
+    "**6) At what time is $V(t)$ max?**<br>\n",
+    "Set the phase angle to -90° and the frequency to 1 Hz. Move the time silder such that $\\mathrm{Re}(V(t))$ becomes max. When you click it once to put the focus on it you can use the **arrow keys of your keyboard** to adjust the time values precisely. Let us denote this time as $t_1$.\n",
+    "\n",
+    "The real part of $V$ is<br> \n",
+    "$V_\\mathrm{re}(t) = V_0\\cos(\\omega t + \\phi)$<br>\n",
+    "Insert the time $t_1$ you found together with the predefined frequency $f$ and phase $phi$ (convert it from degree to radians) as well as amplitude $V_0$ and calculate. Check your experimental findings. Can you v\n",
+    "\n"
    ]
   },
   {
