--- a/eeng0550_AC_3-Phases/eeng0550_AC_3-Phases_V001.ipynb
+++ b/eeng0550_AC_3-Phases/eeng0550_AC_3-Phases_V001.ipynb
@@ -5,14 +5,14 @@
    "id": "9e1ca25e-9ac9-4a06-83a6-ba1d289ace95",
    "metadata": {},
    "source": [
-    "# Alternating Current and Effective Values\n",
+    "# Alternating Current, Effective Values and 3-Phase Power Grids\n",
     "\n",
     "**RMS:** Root Mean Square"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 191,
    "id": "b738dedd-e212-49ff-9982-3e7abfcc2231",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 192,
    "id": "28fa1a33-36d7-4b10-a5c2-3838b3a23166",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 193,
    "id": "9e6114dd-b97a-42a2-8d84-c68454d74a8a",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 194,
    "id": "a03b0d30-0b55-4101-8ac3-0a44da1c49f3",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
        "[]"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 195,
    "id": "9c3b493c-0861-40fd-a1b6-c8498814b96b",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
        "[]"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1048,35 +1048,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21b033cb-316a-486c-be70-d2fdead57a14",
-   "metadata": {},
-   "source": [
-    "## The table above in another format"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5572279d-433b-400b-8bb9-807d5703263c",
-   "metadata": {},
-   "source": [
-    "| Symbol | Meaning | Symbol | Meaning | Value | Symbol | Meaning | Value |\n",
-    "|:------ |:------- |:------ |:------- |:----- |:------ |:------- |:----- |\n",
-    "| $$L_1$$  | Phase 1          | $$V_{1N}$$ | RMS voltage between phase 1 and neutral | $$230\\,\\mathrm{V_{rms}}$$ | $$V_{12}$$ | RMS voltage between phase 1 and 2 | $$400\\,\\mathrm{V_{rms}}$$ |\n",
-    "| $$L_2$$  | Phase 2          | $$V_{2N}$$ | RMS voltage between phase 2 and neutral | $$230\\,\\mathrm{V_{rms}}$$ | $$V_{23}$$ | RMS voltage between phase 2 and 3 | $$400\\,\\mathrm{V_{rms}}$$ |\n",
-    "| $$L_3$$  | Phase 3          | $$V_{3N}$$ | RMS voltage between phase 3 and neutral | $$230\\,\\mathrm{V_{rms}}$$ | $$V_{31}$$ | RMS voltage between phase 3 and 1 | $$400\\,\\mathrm{V_{rms}}$$ |\n",
-    "| $$N$$    | Neural           | $$PE$$   | Protective Earth | | | | | |\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b13a6e90-1358-4d69-a30e-0f2a62a989a8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "08167681-3383-4683-a538-6b2d4cb82eed",
    "metadata": {},
    "source": [
@@ -1123,6 +1094,35 @@
     "ax5.set_xlim(0,2)\n",
     "ax5.set_xlabel(r\"$\\phi$ in $\\pi$\")\n",
     "plt.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21b033cb-316a-486c-be70-d2fdead57a14",
+   "metadata": {},
+   "source": [
+    "## The table above in another format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b13a6e90-1358-4d69-a30e-0f2a62a989a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5572279d-433b-400b-8bb9-807d5703263c",
+   "metadata": {},
+   "source": [
+    "| Symbol | Meaning | Symbol | Meaning | Value | Symbol | Meaning | Value |\n",
+    "|:------ |:------- |:------ |:------- |:----- |:------ |:------- |:----- |\n",
+    "| $$L_1$$  | Phase 1          | $$V_{1N}$$ | RMS voltage between phase 1 and neutral | $$230\\,\\mathrm{V_{rms}}$$ | $$V_{12}$$ | RMS voltage between phase 1 and 2 | $$400\\,\\mathrm{V_{rms}}$$ |\n",
+    "| $$L_2$$  | Phase 2          | $$V_{2N}$$ | RMS voltage between phase 2 and neutral | $$230\\,\\mathrm{V_{rms}}$$ | $$V_{23}$$ | RMS voltage between phase 2 and 3 | $$400\\,\\mathrm{V_{rms}}$$ |\n",
+    "| $$L_3$$  | Phase 3          | $$V_{3N}$$ | RMS voltage between phase 3 and neutral | $$230\\,\\mathrm{V_{rms}}$$ | $$V_{31}$$ | RMS voltage between phase 3 and 1 | $$400\\,\\mathrm{V_{rms}}$$ |\n",
+    "| $$N$$    | Neural           | $$PE$$   | Protective Earth | | | | | |\n"
    ]
   },
   {
