--- a/eeng0500_RC_Reactance_Impedance/Phasor_Diagram_VI_Simple_V001.ipynb
+++ b/eeng0500_RC_Reactance_Impedance/Phasor_Diagram_VI_Simple_V001.ipynb
@@ -13,7 +13,7 @@
    "id": "d65ae39b-c959-45b9-8fba-194fa227613a",
    "metadata": {},
    "source": [
-    "Run it on<br>[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/rolfbecker/EE_1.08_2_EEng_WS2022/main?labpath=eeng0500_RC_Reactance_Impedance%2FPhasor_Diagram_V-I_Simple_V001.ipynb)"
+    "Run it on<br>[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/rolfbecker/EE_1.08_2_EEng_WS2022/main?labpath=eeng0500_RC_Reactance_Impedance%2FPhasor_Diagram_VI_Simple_V001.ipynb)"
    ]
   },
   {
@@ -263,7 +263,7 @@
     "\n",
     "The real part of $V$ is<br> \n",
     "$V_\\mathrm{re}(t) = V_0\\cos(\\omega t + \\phi)$<br>\n",
-    "Insert the time $t_1$ you found together with the predefined frequency $f$ and phase $phi$ (convert it from degree to radians) as well as amplitude $V_0$ and calculate. Check your experimental findings. Can you v\n",
+    "Insert the time $t_1$ you found together with the predefined frequency $f$ and phase angle difference $\\phi$ (convert it from degree to radians) as well as amplitude $V_0$ and calculate. Check your experimental findings. Can you verify your experimental finding?\n",
     "\n"
    ]
   },
