--- a/eeng0500_RC_Reactance_Impedance/Phasor_Diagram_VI_Simple_V001.ipynb
+++ b/eeng0500_RC_Reactance_Impedance/Phasor_Diagram_VI_Simple_V001.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "id": "b5dc7efe-cac9-49d0-aecc-eca94e37e5bf",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,8 @@
     "    Itr = real(It)\n",
     "    Vtr = real(Vt)\n",
     "        \n",
-    "    fig7,(ax71, ax72) = plt.subplots(1,2,figsize=(16,4), width_ratios=[1, 2.5], dpi = 136)\n",
+    "# works only for version >=3.6     fig7,(ax71, ax72) = plt.subplots(1,2,figsize=(16,4), width_ratios=[1, 2.5], dpi = 136)\n",
+    "    fig7,(ax71, ax72) = plt.subplots(1,2,figsize=(16,4), gridspec_kw={'width_ratios': [1, 2.5]}, dpi = 136)\n",
     "\n",
     "    plot_cx_arrow_xy(ax71, It, color=\"r\", label=r\"$I(t)$\")\n",
     "    plot_cx_arrow_xy(ax71, Vt, color=\"b\", label=r\"$V(t)$\")\n",
@@ -192,14 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "id": "3556c270-4820-4a83-bbe7-bba22c6633fa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af44a8ea4a0d4a3eb97b5b2e8073ca53",
+       "model_id": "d60fb8bbf4ea4019ab86034a46810f01",
        "version_major": 2,
        "version_minor": 0
       },
@@ -207,7 +208,7 @@
        "interactive(children=(FloatSlider(value=2.0, description='V0', max=4.0, min=1.0, step=0.5), FloatSlider(value=…"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
