--- a/eeng0500_RC_Reactance_Impedance/Phasor_Diagram_VI_Simple_V001.ipynb
+++ b/eeng0500_RC_Reactance_Impedance/Phasor_Diagram_VI_Simple_V001.ipynb
@@ -200,7 +200,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "135d04eb70a1467c857a651a5d0e6aa9",
+       "model_id": "64b5558ef916421386a1b5bcd76fc317",
        "version_major": 2,
        "version_minor": 0
       },
@@ -265,7 +265,8 @@
     "The real part of $V$ is<br> \n",
     "$V_\\mathrm{re}(t) = V_0\\cos(\\omega t + \\phi)$<br>\n",
     "Insert the time $t_1$ you found together with the predefined frequency $f$ and phase angle difference $\\phi$ (convert it from degree to radians) as well as amplitude $V_0$ and calculate. Check your experimental findings. Can you verify your experimental finding?\n",
-    "\n"
+    "\n",
+    "Now change the frequency to 2 Hz. At which time $t_2$ does $V(t)$ become max now?"
    ]
   },
   {
